# OpenIntegrations

./: .gitattributes  .gitignore  .project  .~lock.Без имени 2.csv#  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-THIRD-PARTY  NOTICE  README.md  README_ENG.md  THIRD-PARTY-LICENSES  article-opi-release-2.0.0.md  check_licenses.bat  codestat.txt  context7.json  data.json.gpg  data.sqlite.gpg  decrypt_secret.sh  false  jenkinsfile  package-lock.json  public.key  sonar-project.properties  super_secret_data.json  super_secret_data.json.gpg  Без имени 2.csv  ФайловыйПоток
src/addins/!commons/common-tcp/: Cargo.toml
src/addins/!commons/common-tcp/src/: config.rs  lib.rs  rustls_methods.rs  tcp_establish.rs  tls_settings.rs
src/addins/commons/common-server/: Cargo.toml  README.md
src/addins/commons/common-server/src/: backend.rs  connection.rs  lib.rs  macros.rs  message.rs
src/addins/crypto/: Cargo.toml  deny.toml  release.bat
src/addins/crypto/src/: lib.rs  methods.rs
src/addins/crypto/src/component/: methods.rs  mod.rs
src/addins/ftp/: Cargo.toml  release.bat
src/addins/ftp/src/: addin.rs  backend.rs  configuration.rs  ftp_client.rs  lib.rs  passive_establish.rs  worker.rs
src/addins/ftp/src/component/: cert_provider.rs  configuration.rs  ftp_client.rs  mod.rs  passive_establish.rs  tcp_establish.rs  tls_establish.rs
src/addins/grpc/: Cargo.toml  README.md  about.txt  build.rs  release.bat  test_server_example.py
src/addins/grpc/src/: ack_stream.rs  addin.rs  backend.rs  backend_core.rs  client_state.rs  connection.rs  grpc_caller.rs  identity_codec.rs  introspection.rs  lib.rs  message_converter.rs  proto_loader.rs  stream_manager.rs  streaming_caller.rs  worker.rs
src/addins/grpc/src/component/: backend_core.rs  client_state.rs  connection.rs  grpc_caller.rs  grpc_client.rs  introspection.rs  message_converter.rs  mod.rs  proto_loader.rs  stream_manager.rs  streaming_caller.rs
src/addins/grpc/src/core/: mod.rs
src/addins/http_server/: Cargo.toml  README.md  deny.toml  release.bat
src/addins/http_server/src/: addin.rs  backend.rs  lib.rs  server.rs  wrapper.rs
src/addins/http_server/src/http/: backend.rs  mod.rs  server.rs  wrapper.rs
src/addins/http_server/src/websocket/: backend.rs  mod.rs  server.rs  wrapper.rs
src/addins/lua/: Cargo.toml  release.bat
src/addins/lua/src/: addin.rs  backend.rs  lib.rs  worker.rs
src/addins/lua/src/component/: janx_convert.rs  lua_engine.rs  lua_functions.rs  lua_globals.rs  lua_packages.rs  lua_utils.rs  mod.rs
src/addins/lyna/: Cargo.toml  release.bat
src/addins/lyna/src/: addin.rs  backend.rs  lib.rs  worker.rs
src/addins/lyna/src/component/: lua_globals.rs  lua_packages.rs
src/addins/mongo/: Cargo.toml  release.bat
src/addins/mongo/.cargo/: config.toml
src/addins/mongo/src/component/: methods.rs  mod.rs
src/addins/mongo/src/core/: getset.rs  mod.rs
src/addins/mongodb/: Cargo.toml  release.bat
src/addins/mongodb/src/: addin.rs  backend.rs  backend_core.rs  backend_methods.rs  bson.rs  lib.rs  worker.rs
src/addins/mongodb/src/component/: backend_core.rs  backend_methods.rs  bson.rs  mod.rs
src/addins/mongodb/src/core/: mod.rs
src/addins/mssql/: Cargo.toml  release.bat
src/addins/mssql/src/: addin.rs  backend.rs  lib.rs  query.rs  worker.rs
src/addins/mssql/src/component/: backend.rs  dataset.rs  methods.rs  mod.rs
src/addins/mssql/src/core/: getset.rs  mod.rs
src/addins/mysql/: Cargo.toml  Cross.toml  release.bat
src/addins/mysql/src/: addin.rs  backend.rs  lib.rs  methods.rs  query.rs  worker.rs
src/addins/mysql/src/component/: dataset.rs  methods.rs  mod.rs
src/addins/native_api/: Cargo.toml  release.bat
src/addins/native_api/src/: addin.rs  backend.rs  lib.rs  worker.rs
src/addins/native_api/src/host/: abi.rs  memory.rs  mod.rs  variant_conv.rs
src/addins/postgres/: Cargo.toml  Cross.toml  CrossOld.toml  release.bat
src/addins/postgres/src/: addin.rs  backend.rs  lib.rs  methods.rs  query.rs  worker.rs
src/addins/postgres/src/component/: dataset.rs  methods.rs  mod.rs
src/addins/rar/: Cargo.toml  build.rs  release.bat
src/addins/rar/src/: addin.rs  archive_description.rs  archive_info.rs  archive_ops.rs  archive_settings.rs  backend.rs  lib.rs  worker.rs
src/addins/rar/unrar_sys/: .gitignore  Cargo.toml  build.rs
src/addins/rar/unrar_sys/src/: lib.rs
src/addins/rcon/: Cargo.toml  release.bat
src/addins/rcon/src/: addin.rs  backend.rs  lib.rs  methods.rs  settings.rs  worker.rs
src/addins/rcon/src/component/: methods.rs  mod.rs  settings.rs
src/addins/rcon/src/core/: mod.rs
src/addins/sevenz/: Cargo.toml  release.bat
src/addins/sevenz/src/: addin.rs  archive_description.rs  archive_info.rs  archive_ops.rs  archive_settings.rs  backend.rs  lib.rs  path_security.rs  worker.rs
src/addins/sqlite/: Cargo.toml  deny.toml  release.bat
src/addins/sqlite/src/: addin.rs  backend.rs  lib.rs  methods.rs  query.rs  worker.rs
src/addins/sqlite/src/component/: dataset.rs  methods.rs  mod.rs
src/addins/ssh/: Cargo.toml  release.bat
src/addins/ssh/src/: addin.rs  backend.rs  connection.rs  connection_response.rs  keyboard_interactive.rs  lib.rs  sftp_methods.rs  sftp_ops.rs  ssh_methods.rs  ssh_settings.rs  worker.rs
src/addins/ssh/src/component/: mod.rs  sftp.rs  (+5 more)
src/addins/tar/: Cargo.toml  release.bat
src/addins/tar/src/: addin.rs  archive_description.rs  archive_info.rs  archive_ops.rs  archive_settings.rs  backend.rs  worker.rs
src/addins/tcp_client/: Cargo.toml  Cross.toml  release.bat
src/addins/tcp_client/src/: addin.rs  backend.rs  lib.rs  methods.rs  opi_tcp.rs  worker.rs
src/addins/tcp_server/: Cargo.toml  libbackend.rlib  release.bat
src/addins/tcp_server/src/: addin.rs  backend.rs  lib.rs  listener.rs
src/addins/ws_client/: Cargo.toml  deny.toml  release.bat
src/addins/ws_client/src/: addin.rs  backend.rs  client.rs  connection.rs  lib.rs  receiving.rs  sending.rs  worker.rs
src/addins/zeromq/: Cargo.toml  release.bat
src/addins/zeromq/src/: addin.rs  backend.rs  lib.rs  methods.rs
(+23919 files in other folders)
