[package]
name = "opi_ftp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
suppaftp = { version = "6.3.0", features = ["rustls", "secure"] }
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
socks = "0.3.4"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
webpki-roots = "1.0.1"
rustls = { version = "0.23.28", features = ["ring"] }
rustls-pemfile = "2.2.0"
httparse = "1.10.1"
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }