[package]
name = "opi_ftp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../!commons/common-core" }
common-tcp = { path = "../!commons/common-tcp", features = ["rustls"], default-features = false }
common-utils = { path = "../!commons/common-utils" }

suppaftp = { version = "6.3.0", features = ["rustls", "secure"] }
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
socks = "0.3.4"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
webpki-roots = "1.0.1"
rustls = { version = "0.23.28", features = ["ring"] }
rustls-pemfile = "2.2.0"
httparse = "1.10.1"
