[package]
name = "opi_grpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "unwind"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
serde_json = "1.0"
common-utils = { path = "../!commons/common-utils" }
common-tcp = { path = "../!commons/common-tcp", default-features = false, features = ["rustls"] }
common-core = { path = "../!commons/common-core" }
tonic = { version = "0.13.1", features = ["transport", "channel"] }
prost = "0.14.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
prost-reflect = "0.16.0"
protox = "0.9.0"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
http = "1.0"
uuid = { version = "1.17.0", features = ["v4"] }
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.13.1"
