[package]
name = "opi_grpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "unwind"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
common-utils = { path = "../!commons/common-utils" }
common-core = { path = "../!commons/common-core" }
common-tcp = { path = "../!commons/common-tcp", default-features = false, features = ["rustls"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.13.1", features = ["transport", "channel"] }
tower = "0.5"
prost = "0.14.1"
prost-reflect = "0.16.0"
protox = "0.9.0"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
http = "1.0"
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["v4"] }
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.13.1"
