[package]
name = "opi_httpserver"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../commons/common-core" }
common-utils = { path = "../commons/common-utils" }
common-binary = { path = "../commons/common-binary" }
common-logs = { path = "../commons/common-logs" }
common-server = { path = "../commons/common-server" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.17.0", features = ["v4"] }
indexmap = "2.7.0"
futures-util = "0.3"
