[package]
name = "lyna"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["lua54"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-logs = { path = "../commons/common-logs" }
common-utils = { path = "../commons/common-utils" }
mlua = { version = "0.10.5", default-features = false, features = ["vendored", "serialize"] }
serde = "1.0.219"
serde_json = "1.0.140"