[package]
name = "opi_mongodb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
addin1c = "0.5.0"
bson = "2.0"
serde_json = "1.0.133"



[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]
