[package]
name = "opi_mongodb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
mongodb = { version = "3.2.4"}
serde_json = "1.0.140"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.45.1"
dateparser = "0.2.1"
regex = "1.12.2"