[package]
name = "opi_mongodb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../!commons/common-core" }
common-binary = { path = "../!commons/common-binary" }
common-utils = { path = "../!commons/common-utils" }

mongodb = { version = "3.2.4"}
serde_json = "1.0.140"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.45.1"
dateparser = "0.2.1"
regex = "1.12.2"