[package]
name = "opi_mysql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
mysql = { version = "26.0.0", features = ["time", "chrono", "native-tls"] }
serde_json = "1.0"
base64 = "0.22.1"
chrono = "0.4.40"
mysql_common = "0.34.1"
dateparser = "0.2.1"
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }
common-dataset = { path = "../!commons/common-dataset" }