[package]
name = "opi_mysql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }
common-dataset = { path = "../!commons/common-dataset" }
common-binary = { path = "../!commons/common-binary" }
common-core = { path = "../!commons/common-core" }

mysql = { version = "26.0.0", features = ["time", "chrono", "native-tls"] }
serde_json = "1.0"
base64 = "0.22.1"
chrono = "0.4.40"
mysql_common = "0.34.1"
dateparser = "0.2.1"
