[package]
name = "opi_mysql"
version = "2.3.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[features]
vendored-openssl = ["openssl/vendored", "common-tcp/vendored-openssl"]

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-tcp = { path = "../commons/common-tcp" }
common-utils = { path = "../commons/common-utils" }
common-dataset = { path = "../commons/common-dataset" }
common-logs = { path = "../commons/common-logs" }

mysql = { git = "https://github.com/Bayselonarrend/rust-mysql-simple", branch = "master", features = ["time", "chrono", "native-tls"] }
serde_json = "1.0"
chrono = "0.4.40"
mysql_common = "0.37.0"
dateparser = "0.2.1"

[target.'cfg(unix)'.dependencies]
openssl = "0.10.80"
