[package]
name = "opi_native_api"
version = "2.3.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-janx = { path = "../commons/common-janx" }
common-logs = { path = "../commons/common-logs" }
common-utils = { path = "../commons/common-utils" }
libloading = "0.8.9"
uuid = { version = "1.17.0", features = ["v4"] }
