[package]
name = "opi_postgres"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
postgres = {  version = "0.19.9", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"]}
serde_json = "1.0"
base64 = "0.22.1"
chrono = "0.4.39"
uuid = "1.12.1"
native-tls = { version = "0.2.14", features = ["vendored"] }
postgres-native-tls = "0.5"
