[package]
name = "opi_postgres"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }
common-dataset = { path = "../!commons/common-dataset" }
common-binary = { path = "../!commons/common-binary" }
common-core = { path = "../!commons/common-core" }

postgres = { version = "0.19.9", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
serde_json = "1.0"
base64 = "0.22.1"
chrono = "0.4.39"
uuid = { version = "1.12.1", features = ["v4"] }
postgres-native-tls = "0.5"
dateparser = "0.2.1"
rust_decimal = { version = "1.37.2" , features = ["db-postgres", "serde-float", "serde-str"] }


