[package]
name = "opi_rcon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
addin1c = "0.5.0"
rcon-client = "0.1.3"
serde_json = "1.0"
common-utils = { path = "../!commons/common-utils" }