[package]
name = "opi_rcon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../!commons/common-core" }
common-utils = { path = "../!commons/common-utils" }

rcon-client = "0.1.3"
serde_json = "1.0"
