[package]
name = "opi_sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
rusqlite = {  version = "0.32.1", features = ["bundled", "load_extension"]}
serde_json = "1.0"
base64 = "0.22.1"
common-dataset = { path = "../!commons/common-dataset" }
common-utils = { path = "../!commons/common-utils" }