[package]
name = "opi_sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../!commons/common-core" }
common-dataset = { path = "../!commons/common-dataset" }
common-utils = { path = "../!commons/common-utils" }
common-binary = { path = "../!commons/common-binary" }

rusqlite = {  version = "0.32.1", features = ["bundled", "load_extension"]}
serde_json = "1.0"
base64 = "0.22.1"