[package]
name = "opi_sqlite"
version = "2.3.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-dataset = { path = "../commons/common-dataset" }
common-utils = { path = "../commons/common-utils" }
common-logs = { path = "../commons/common-logs" }

rusqlite = { version = "0.32.1", features = ["bundled", "load_extension"] }
serde_json = "1.0"
