[package]
name = "opi_ssh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
addin1c = "0.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }

[target.'cfg(all(windows, target_env = "msvc"))'.dependencies.ssh2]
version = "0.9.5"
features = ["vendored-openssl", "openssl-on-win32"]

[target.'cfg(not(all(windows, target_env = "msvc")))'.dependencies.ssh2]
version = "0.9.5"
