[package]
name = "opi_ssh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../!commons/common-core" }
common-tcp = { path = "../!commons/common-tcp" }
common-utils = { path = "../!commons/common-utils" }

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(all(windows, target_env = "msvc"))'.dependencies.ssh2]
version = "0.9.5"
features = ["vendored-openssl", "openssl-on-win32"]

[target.'cfg(not(all(windows, target_env = "msvc")))'.dependencies.ssh2]
version = "0.9.5"
