[package]
name = "opi_ssh"
version = "2.2.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-logs = { path = "../commons/common-logs" }
common-tcp = { path = "../commons/common-tcp" }
common-utils = { path = "../commons/common-utils" }
common-janx = { path = "../commons/common-janx" }

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
openssl = "0.10.80"

[target.'cfg(all(windows, target_env = "msvc"))'.dependencies.ssh2]
version = "0.9.5"
features = ["vendored-openssl", "openssl-on-win32"]

[target.'cfg(not(all(windows, target_env = "msvc")))'.dependencies.ssh2]
version = "0.9.5"
