[package]
name = "opi_tcpclient"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
addin1c = "0.5.0"
native-tls = { version = "0.2.14", features = ["vendored"] }
serde_json = "1.0.140"