[package]
name = "opi_tcpserver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
addin1c = "0.5.0"
serde_json = "1.0.137"
dashmap = "6.1.0"
once_cell = "1.20.2"