[package]
name = "opi_tcpserver"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../commons/common-core" }
common-utils = { path = "../commons/common-utils" }
common-binary = { path = "../commons/common-binary" }

serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
dashmap = "6.1.0"
