[package]
name = "opi_wsclient"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../commons/common-core" }
common-utils = { path = "../commons/common-utils" }
common-binary = { path = "../commons/common-binary" }
common-logs = { path = "../commons/common-logs" }
common-tcp = { path = "../commons/common-tcp", features = ["rustls"] }

serde_json = "1.0"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
url = "2.5"
rustls = "0.23"

