[package]
name = "opi_zeromq"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "1C native add-in: ZeroMQ over the pure-Rust `zeromq` crate (REQ/REP first)"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-core = { path = "../commons/common-core" }
common-binary = { path = "../commons/common-binary" }
common-utils = { path = "../commons/common-utils" }

serde_json = "1.0.140"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "time"] }
zeromq = "0.6.0-pre.2"

