[package]
name = "opi_zeromq"
version = "2.2.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = "z"

[dependencies]
common-backend = { path = "../commons/common-backend" }
common-core = { path = "../commons/common-core" }
common-janx = { path = "../commons/common-janx" }
common-utils = { path = "../commons/common-utils" }
common-logs = { path = "../commons/common-logs" }

tokio = { version = "1.52.2", features = ["rt-multi-thread", "time"] }
zeromq = "0.6.0-pre.2"

