[package]
name = "common-tcp"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["dep:native-tls"]
rustls = ["dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots", "dep:rustls-native-certs"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
socks = "0.3.4"
base64 = "0.22.1"
httparse = "1.10.1"
serde_json = "1.0"
url = "2.5.4"

native-tls = { version = "0.2.14", optional = true }

rustls = { version = "0.23.28", features = ["ring"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
webpki-roots = { version = "1.0.1", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
