[package]
name = "unrar_sys"
version = "0.5.8"
authors = ["Danyel Bayraktar <rust@danyel.io>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "FFI bindings to unrar (OPI-patched build for Linux cdylib)"
repository = "https://github.com/muja/unrar.rs"
edition = "2021"

[features]
default = ["std"]
std = ["libc/std", "winapi/std"]

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1"
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "ntdef"] }
